--- a/index.html
+++ b/index.html
@@ -1524,7 +1524,7 @@ let RAW = [
   {w:'鴫焼',k:'しぎやき',s:'夏',p:'三夏',c:'生活'},
   {w:'焼酎',k:'しょうちゅう',s:'夏',p:'三夏',c:'生活'},
   {w:'甘酒',k:'あまざけ',s:'夏',p:'三夏',c:'生活'},
-  {w:'清涼飲料水',k:'せいりょういんりょうすい',s:'夏',p:'三夏',c:'生活},
+  {w:'清涼飲料水',k:'せいりょういんりょうすい',s:'夏',p:'三夏',c:'生活'},
   {w:'ソーダ水',k:'そーだすい',s:'夏',p:'三夏',c:'生活'},
   {w:'サイダー',k:'さいだー',s:'夏',p:'三夏',c:'生活'},
   {w:'氷菓',k:'ひょうか',s:'夏',p:'三夏',c:'生活'},
