--- a/index.html
+++ b/index.html
@@ -2906,7 +2906,7 @@ let RAW = [
   {w:'鰭酒',k:'ひれざけ',s:'冬',p:'三冬',c:'生活'},
   {w:'寝酒',k:'ねざけ',s:'冬',p:'三冬',c:'生活'},
   {w:'蕎麦掻',k:'そばがき',s:'冬',p:'三冬',c:'生活'},
-  {w:'今川焼',k:'いまがわやき',s:'冬',p:'三冬',c:'生活'],
+  {w:'今川焼',k:'いまがわやき',s:'冬',p:'三冬',c:'生活'},
   {w:'薬喰',k:'くすりぐい',s:'冬',p:'三冬',c:'生活'},
   {w:'鯛焼',k:'たいやき',s:'冬',p:'三冬',c:'生活'},
   {w:'夜鷹蕎麦',k:'よたかそば',s:'冬',p:'三冬',c:'生活'},
