--- a/index.html
+++ b/index.html
@@ -3760,6 +3760,8 @@ document.getElementById('editModal').addEventListener('click', function(e) {
 
 // ===================== 編集機能 ここまで =====================
 
+© 季語辞典 2026 伊藤映雪 All rights reserved.
+
 // Init
 document.getElementById('totalCount').textContent = RAW.length.toLocaleString();
 render();
