--- a/index.html
+++ b/index.html
@@ -1019,6 +1019,7 @@ let RAW = [
   {w:'初午',k:'はつうま',s:'春',p:'初春',c:'行事'},
   {w:'針供養',k:'はりくよう',s:'春',p:'初春',c:'行事'},
   {w:'バレンタインの日',k:'ばれんたいんのひ',s:'春',p:'初春',c:'行事'},
+  {w:'龍太忌',k:'りゅうたき',s:'春',p:'初春',c:'行事'},
   // 初春・動物
   {w:'猫の恋',k:'ねこのこい',s:'春',p:'初春',c:'動物'},
   {w:'白魚',k:'しらうお',s:'春',p:'初春',c:'動物'},
