--- a/index.html
+++ b/index.html
@@ -929,7 +929,13 @@ let RAW = [
   {w:'春の服',k:'はるのふく',s:'春',p:'三春',c:'生活'},
   {w:'田楽',k:'でんがく',s:'春',p:'三春',c:'生活'},
   {w:'蜆汁',k:'しじみじる',s:'春',p:'三春',c:'生活'},
+  {w:'菜飯',k:'なめし',s:'春',p:'三春',c:'生活'},
   {w:'春灯',k:'しゅんとう',s:'春',p:'三春',c:'生活'},
+  {w:'春の炉',k:'はるのろ',s:'春',p:'三春',c:'生活'},
+  {w:'春炬燵',k:'はるごたつ',s:'春',p:'三春',c:'生活'},
+  {w:'春火鉢',k:'はるひばち',s:'春',p:'三春',c:'生活'},
+  {w:'白子干',k:'しらすぼし',s:'春',p:'三春',c:'生活'},
+  {w:'目刺',k:'めざし',s:'春',p:'三春',c:'生活'},
   {w:'耕',k:'たがやし',s:'春',p:'三春',c:'生活'},
   {w:'畑打',k:'はたうち',s:'春',p:'三春',c:'生活'},
   {w:'剪定',k:'せんてい',s:'春',p:'三春',c:'生活'},
@@ -1980,7 +1986,6 @@ let RAW = [
   {w:'蓮の浮葉',k:'はすのうきは',s:'夏',p:'仲夏',c:'植物'},
   {w:'早苗',k:'さなえ',s:'夏',p:'仲夏',c:'植物'},
   {w:'桜の実',k:'さくらのみ',s:'夏',p:'仲夏',c:'植物'},
-  {w:'杜鵑草',k:'ほととぎす',s:'夏',p:'仲夏',c:'植物'},
   {w:'夾竹桃',k:'きょうちくとう',s:'夏',p:'仲夏',c:'植物'},
   {w:'南天の花',k:'なんてんのはな',s:'夏',p:'仲夏',c:'植物'},
   {w:'花橘',k:'はなたちばな',s:'夏',p:'仲夏',c:'植物'},
@@ -2823,8 +2828,7 @@ let RAW = [
   {w:'冬の月',k:'ふゆのつき',s:'冬',p:'三冬',c:'天文'},
   {w:'冬の星',k:'ふゆのほし',s:'冬',p:'三冬',c:'天文'},
   {w:'寒風',k:'かんぷう',s:'冬',p:'三冬',c:'天文'},
-  {w:'北風',k:'きたかぜ',s:'冬',p:'三冬',c:'天文'},
-  {w:'木枯',k:'こがらし',s:'冬',p:'三冬',c:'天文'},
+  {w:'北風',k:'きた／きたかぜ',s:'冬',p:'三冬',c:'天文'},
   {w:'空風',k:'からかぜ',s:'冬',p:'三冬',c:'天文'},
   {w:'虎落笛',k:'もがりぶえ',s:'冬',p:'三冬',c:'天文'},
   {w:'冬の雨',k:'ふゆのあめ',s:'冬',p:'三冬',c:'天文'},
@@ -2911,7 +2915,7 @@ let RAW = [
   {w:'縄飛',k:'なわとび',s:'冬',p:'三冬',c:'生活'},
   {w:'夜着',k:'よぎ',s:'冬',p:'三冬',c:'生活'},
   {w:'衾',k:'ふすま',s:'冬',p:'三冬',c:'生活'},
-  {w:'ちゃんちゃんこ',k:'ちやんちやんこ',s:'冬',p:'三冬',c:'生活'},
+  {w:'ちゃんちゃんこ',k:'ちゃんちゃんこ',s:'冬',p:'三冬',c:'生活'},
   {w:'背蒲団',k:'せなぶとん',s:'冬',p:'三冬',c:'生活'},
   {w:'ねんねこ',k:'ねんねこ',s:'冬',p:'三冬',c:'生活'},
   {w:'着ぶくれ',k:'きぶくれ',s:'冬',p:'三冬',c:'生活'},
@@ -2940,7 +2944,7 @@ let RAW = [
   {w:'鯛焼',k:'たいやき',s:'冬',p:'三冬',c:'生活'},
   {w:'夜鷹蕎麦',k:'よたかそば',s:'冬',p:'三冬',c:'生活'},
   {w:'狸汁',k:'たぬきじる',s:'冬',p:'三冬',c:'生活'},
-  {w:'納豆汁',k:'なっとじる',s:'冬',p:'三冬',c:'生活'},
+  {w:'納豆汁',k:'なっとうじる',s:'冬',p:'三冬',c:'生活'},
   {w:'のっぺい汁',k:'のっぺいじる',s:'冬',p:'三冬',c:'生活'},
   {w:'根深汁',k:'ねぶかじる',s:'冬',p:'三冬',c:'生活'},
   {w:'蕪汁',k:'かぶらじる',s:'冬',p:'三冬',c:'生活'},
@@ -3486,7 +3490,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "茎立":["くきだち"],
 "枸杞の芽":["枸杞芽","枸杞飯"],
 "草の芽":["名草の芽"],
-"草餅":["蓬餅"],
+"草餅":["草の餅","蓬餅","母子餅","草団子"],
 "草若葉":["菊若葉","萩若葉","芭蕉の若葉","罌粟の若葉"],
 "鞍馬の花供養":["鞍馬花会式","花供懺法"],
 "暮の春":["暮春","春暮るる","春の果"],
@@ -3573,7 +3577,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鈴懸の花":["プラタナスの花"],
 "雀の子":["子雀","親雀","黄雀"],
 "巣立鳥":["巣立"],
-"菫":["菫草","花菫","香菫","相撲取草","相撲花","一夜草","一葉草","壷菫","三色菫","パンジー"],
+"菫":["菫草","花菫","香菫","相撲取草","相撲花","一夜草","一葉草","壺菫","三色菫","パンジー"],
 "李の花":["花李"],
 "聖金曜日":["聖金曜","受難日"],
 "製茶":["茶づくり","茶揉み","焙炉","焙炉場","焙炉師"],
@@ -3653,12 +3657,12 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "涅槃会":["涅槃","涅槃の日","仏忌","涅槃像","涅槃絵","涅槃図","涅槃寺","寝釈迦","餅花煎","釈迦の鼻糞","瘠せ馬"],
 "涅槃西風":["涅槃吹","彼岸西風"],
 "根分":["菖蒲根分"],
-"野遊び":["山遊び","野がけ","春遊び","ピクニック"],
+"野遊":["山遊び","野がけ","春遊び","ピクニック"],
 "乗込鮒":["乗つ込み","初鮒","春の鮒","春鮒釣り"],
 "長閑":["長閑さ","のどけし","のどけさ"],
 "野蒜":["ひる"],
 "野焼く":["野焼","野火","草焼く"],
-"海苔":["甘海苔","岩海苔","海苔ひび","海苔粗朶","海苔舟","海苔採","海苔掻く","海苔干す"],
+"海苔":["甘海苔","岩海苔","海苔篊","海苔粗朶","海苔舟","海苔採","海苔掻く","海苔干す"],
 "蠅生る":["蠅の子"],
 "萩根分":["萩植う"],
 "蘩蔞":["はこべら","あさしらげ"],
@@ -3668,7 +3672,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蜂":["蜜蜂","女王蜂","働蜂","熊蜂","穴蜂","土蜂","足長蜂","蜂の巣"],
 "初午":["一の午","二の午","三の午","午祭","稲荷講","福参","験の杉"],
 "初桜":["初花"],
-"花":["花盛り","花明り","花影","花時","花過ぎ","花の雨","花の山","花の昼","花の雲","花埃","花便り","花の宿","花片","花追風"],
+"花":["花盛り","花明り","花影","花朧","花過ぎ","花の雨","花の山","花の昼","花の雲","花埃","花便り","花の宿","花片","花月夜","花盗人","花追風"],
 "花烏賊":["桜烏賊","甲烏賊","真烏賊"],
 "花換祭":["花換"],
 "花篝":["花雪洞"],
@@ -3761,11 +3765,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "風生忌":["艸魚忌",""],
 "風船":["風船玉","紙風船","ゴム風船","風船売"],
 "蕗の薹":["蕗の芽","蕗の花","春の蕗"],
-"藤":["藤の花","白藤","山藤","藤の房","藤浪","藤棚"],
+"藤":["藤の花","白藤","山藤","藤の房","藤浪","藤棚","藤の昼"],
 "復活祭":["イースター","聖週間","染卵","彩（いろ）卵"],
 "二日灸":["二日灸","春の灸"],
 "仏生会":["灌仏会","降誕会","誕生会","浴仏会","花祭","花御堂","花の塔","花亭"],
-"鞦韆":["秋千","ぶらんこ","ふらここ","ふらんと","半仙戯","ブランコ"],
+"鞦韆":["秋千","ぶらんこ","ふらここ","ふらんと","半仙戯"],
 "蛇穴を出づ":["蛇出づ"],
 "ヘリオトロープ":["香水木"],
 "遍路":["お遍路","遍路笠","遍路杖","遍路道","遍路寺","遍路宿","善根宿","四国巡り","一国巡り","島四国"],
@@ -3792,7 +3796,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "水口祭":["苗代祭","田祭","五十串","水口の幣"],
 "峰入り":["大峰入","順の峰入","順の峰","入峰"],
 "壬生念仏":["壬生祭","壬生狂言","壬生踊","壬生の鉦","壬生の面"],
-"ミモザの花":["銀葉アカシア"],
+"ミモザ":["花ミモザ"],
 "麦踏":["麦を踏む"],
 "蒸鰈":["柳むし","柳むしがれひ"],
 "睦五郎":["むつ","むつ掘る","むつ掛","むつ曳網"],
@@ -3870,7 +3874,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "青田":["青田風","青田波","青田道"],
 "青蔦":["蔦茂る"],
 "青唐辛子":["青唐辛","青蕃椒","葉唐辛子"],
-"青葉":["青葉山","青葉風","青葉時雨","青時雨","青葉雨"],
+"青葉":["青葉山","青葉風","青葉時雨","青時雨","青葉雨","青葉騒"],
 "青鬼灯":["青酸漿"],
 "青みどろ":["青味泥（あおみどろ）"],
 "赤鱏":["えひ","えひ"],
@@ -4074,7 +4078,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "さつき":["杜鵑花","皐月","五月躑躅"],
 "五月富士":["皐月富士","雪解富士","夏富士"],
 "五月闇":["梅雨闇","夏闇"],
-"早苗":["捨苗","苗篭","早苗束","苗運び","早苗取","早苗舟","若苗","玉苗"],
+"早苗":["捨苗","苗籠","早苗束","苗運び","早苗取","早苗舟","若苗","玉苗"],
 "鯖":["鯖釣","鯖火"],
 "仙人掌の花":["覇王樹"],
 "五月雨":["五月雨","さみだる"],
@@ -4111,9 +4115,9 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "白玉":["氷白玉"],
 "代掻く":["代掻","田掻く","田掻馬","田掻牛","代馬","代牛","田水張る","代田"],
 "白絣":["白地"],
-"新藷":["走り藷","新じゃが","新馬鈴薯"],
+"新藷":["走り藷"],
 "新茶":["走り茶","茶詰","古茶"],
-"新緑":["緑さす"],
+"新緑":["緑さす","緑夜"],
 "慈悲心鳥":["十一"],
 "馬鈴薯の花":["じやがたらの花"],
 "十薬":["どくだみ","どくだみの花"],
@@ -4125,11 +4129,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "忍冬の花":["忍冬"],
 "水中花":["酒中花"],
 "水中眼鏡":["水眼鏡"],
-"水飯":["水飯","洗ひ飯","水漬"],
+"水飯":["洗ひ飯","水漬"],
 "睡蓮":["ひつじぐさ"],
 "すぐり":["カシス","くろすぐり","すぐりの実","グーズベリー","カラント","カーランツ","ふさすぐり"],
 "鮓":["鮨","馴鮓","押鮓","握鮓","早鮓","一夜鮓","巻鮓"],
-"涼し":["朝涼","夕涼","晩涼","夜涼","涼風"],
+"涼し":["涼しさ","朝涼","夕涼","晩涼","夜涼","涼夜","涼意","涼風"],
 "篠の子":["笹の子","芽笹"],
 "納涼":["門涼み","橋涼み","夕涼み","夜涼み","涼み台","納涼船"],
 "鈴蘭":["君影草"],
@@ -4141,7 +4145,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蝉丸忌":["蝉丸祭"],
 "千日草":["千日紅"],
 "蒼朮を焚く":["をけらたく","うけら焼く"],
-"走馬灯":["回り灯篭"],
+"走馬灯":["回り灯籠"],
 "蚕豆":["空豆","はじき豆"],
 "田植":["田植笠","田植歌","田植時"],
 "たかし忌":["牡丹忌"],
@@ -4191,9 +4195,9 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "海桐の花":["花とべら"],
 "トマト":["蕃茄","赤茄子"],
 "虎が雨":["虎が涙雨"],
-"虎鶫":["トラツグミ","鵺"],
+"虎鶫":["鵺"],
 "虎尾草":["をかとらのを"],
-"蜻蛉":["とんぼう","やんま","麦藁とんぼ","塩辛とんぼ"],
+"蜻蛉":["とんばう","やんま","麦藁とんぼ","塩辛とんぼ"],
 "泥鰌鍋":["泥鰌汁","柳川鍋"],
 "土用":["土用入","土用太郎","土用三郎","土用明"],
 "土用鰻":["土用丑の日の鰻"],
@@ -4210,7 +4214,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "夏草":["夏の草","青草"],
 "夏木立":["夏木"],
 "夏蚕":["二番蚕"],
-"夏衣":["夏衣","夏着","夏物"],
+"夏衣":["夏着","夏物"],
 "夏座蒲団":["麻座蒲団","藺座蒲団","革座蒲団"],
 "夏芝居":["夏狂言","水狂言","土用芝居"],
 "夏シャツ":["白シャツ","開襟シャツ","アロハシャツ"],
@@ -4219,7 +4223,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "夏手袋":["網手袋","レース手袋"],
 "夏葱":["刈葱"],
 "夏野":["夏野原","青野"],
-"夏の暁":["夏暁","夏の夜明","夏の朝"],
+"夏の暁":["夏暁","夏の夜明","夏の朝","夏未明"],
 "夏の雨":["夏雨","緑雨"],
 "夏の海":["夏の波","夏濤","夏の浜"],
 "夏の風邪":["夏風邪"],
@@ -4247,20 +4251,20 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "夏めく":["夏きざす"],
 "夏館":["夏邸","夏の宿"],
 "夏休":["暑中休み","暑中休暇"],
-"夏瘦":["夏負け","夏やつれ"],
+"夏痩":["夏負け","夏やつれ","夏ばて"],
 "夏炉":["夏の炉"],
 "鯰":["梅雨鯰","ごみ鯰"],
 "蛞蝓":["なめくじり","なめくじら"],
 "業平忌":["在五忌"],
 "南天の花":["花南天"],
 "西日":["大西日"],
-"虹":["朝虹","夕虹","二重虹"],
+"虹":["朝虹","夕虹","二重虹","虹の橋"],
 "日日草":["日日花"],
 "日射病":["熱射病"],
 "入梅":["梅雨入り","梅雨に入る"],
 "捩花":["もぢばな","ねぢればな","もぢずり","文字摺草"],
 "熱帯魚":["闘魚","天使魚"],
-"寝冷え":["寝冷子"],
+"寝冷":["寝冷子"],
 "合歓の花":["ねぶの花","花合歓"],
 "練供養":["当麻練供養","当麻法事","来迎会","迎接会","曼荼羅会"],
 "凌霄の花":["凌霄","のうぜんかずら"],
@@ -4273,8 +4277,9 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蠅虎":["蠅捕蜘蛛"],
 "蠅除":["蠅覆","蠅帳","蠅入らず"],
 "博多祇園山笠":["山笠","博多祭"],
-"薄暑":["薄暑光"],
+"薄暑":["薄暑光","夕薄暑"],
 "端居":["夕端居"],
+"葉桜":["花は葉に","桜若葉"],
 "蓮の浮葉":["浮葉","蓮の葉"],
 "蓮の花":["はちす","白蓮","紅蓮","蓮華"],
 "蓮見":["蓮見舟"],
@@ -4283,11 +4288,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "肌脱":["片肌脱","諸肌脱"],
 "麨":["麦こがし","麦炒粉","麦香煎"],
 "初鰹":["初松魚"],
-"花氷":["氷柱"],
+"花氷":["氷中花"],
 "花茣蓙":["絵茣蓙"],
 "花菖蒲":["白菖蒲","菖蒲園","菖蒲田"],
 "花橘":["橘の花","右近の橘"],
-"花火":["煙火","打揚花火","仕掛花火","線香花火","手花火","春花火","遠花火","花火舟","花火見"],
+"花火":["煙火","打揚花火","仕掛花火","線香花火","手花火","遠花火","花火舟","花火見"],
 "羽抜鳥":["羽抜鶏"],
 "帚木":["ははきぐさ"],
 "はまごう":["はまぼう"],
@@ -4307,7 +4312,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "晩夏":["季夏","夏深し","晩夏光"],
 "パイナップル":["鳳梨","あななす"],
 "パセリ":["オランダゼリ"],
-"射干":["桧扇","うばたま"],
+"射干":["檜扇","うばたま"],
 "日傘":["ひからかさ","絵日傘","パラソル"],
 "蟇":["蟾蜍","蟾","蝦蟇","がまがへる"],
 "緋鯉":["色鯉","白鯉","錦鯉"],
@@ -4315,21 +4320,23 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "避暑":["避暑地","避暑の宿"],
 "旱":["旱天","旱魃","大旱","旱畑","旱田","旱空"],
 "単衣":["単物"],
-"火取虫":["灯取虫","灯虫","灯蛾","燭蛾","火蛾","蛾"],
+"火取虫":["灯取虫","灯虫","灯蛾","燭蛾","火蛾"],
 "雛罌栗":["虞美人草","ポピー","こくりこ","アマポーラ"],
 "向日葵":["日車","日輪草","天蓋花","天竺葵"],
 "姫女宛":["柳葉姫菊","鉄道草"],
 "日焼":["潮焼"],
-"冷酒":["冷酒","冷し酒"],
+"蜜柑の花":["花蜜柑"],
+"夕立":["ゆだち","白雨","驟雨","夕立雲","夕立風","スコール","片降"],
+"冷酒":["冷し酒"],
+"若葉":["谷若葉","里若葉","山若葉","若葉風","若葉雨","若葉寒","若葉冷"],
 "赤い羽根":["愛の羽根"],
 "赤蜻蛉":["あきつ","秋茜"],
 "秋":["素秋","金秋","三秋","九秋"],
 "秋袷":["秋の袷"],
-"秋麗":["秋麗"],
-"秋扇":["秋扇","秋の団扇","扇置く","捨扇","捨団扇"],
+"秋扇":["秋の団扇","扇置く","捨扇","捨団扇"],
 "秋収め":["田仕舞"],
 "秋惜しむ":["惜しむ秋"],
-"秋風":["秋風","秋の風","金風","爽籟","色なき風","律の風"],
+"秋風":["秋の風","金風","爽籟","色なき風","律の風"],
 "秋草":["秋の草","色草","千草","八千草"],
 "秋寒し":["秋寒"],
 "秋時雨":["秋の時雨"],
@@ -4337,7 +4344,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "秋澄む":["秋気澄む","澄む秋","空澄む"],
 "秋高し":["秋高","天高し","空高し"],
 "秋出水":["秋の出水","秋洪水"],
-"秋茄子":["秋茄子","秋の茄子","名残茄子"],
+"秋茄子":["秋の茄子","名残茄子"],
 "秋の朝":["秋暁"],
 "秋の雨":["秋雨","秋霖","秋黴雨"],
 "秋の海":["秋の波","秋の浜"],
@@ -4355,18 +4362,18 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "秋の蝶":["秋蝶"],
 "秋の虹":["秋虹"],
 "秋の野":["秋野","秋郊","秋の原"],
-"秋の蠅":["残る蝿"],
+"秋の蠅":["残る蠅"],
 "秋の蜂":["残る蜂"],
 "秋の日":["秋日","秋日影","秋日差","秋の日入","秋没日"],
-"秋の灯":["秋灯","秋の燈","秋燈","秋ともし"],
+"秋の灯":["秋灯","秋ともし"],
 "秋の蛍":["秋蛍","残る蛍","病蛍"],
 "秋の水":["秋水","水の秋"],
 "秋の山":["秋山","秋嶺","秋の峰","山澄む","山の秋"],
 "秋の夕焼":["秋夕焼","秋の夕映"],
-"秋の夜":["秋の夜","秋夜","秋の宵","夜半の秋"],
+"秋の夜":["秋夜","秋の宵","夜半の秋"],
 "秋晴":["秋の晴","秋日和"],
 "秋彼岸":["後の彼岸"],
-"秋深し":["深秋","秋さぶ","秋闌","秋更くる","秋深む"],
+"秋深し":["深秋","秋さぶ","秋闌","秋更く","秋深む"],
 "秋蒔":["菜種蒔く","大根蒔く","芥菜蒔く","蚕豆蒔く","豌豆蒔く","罌粟蒔く","紫雲英蒔く"],
 "秋祭":["里祭","村祭","浦祭","在祭"],
 "秋めく":["秋づく"],
@@ -4386,7 +4393,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "犬蓼":["赤のまんま","赤のまま"],
 "稲":["初穂","稲穂","陸穂","粳","糯","稲田","稲の秋"],
 "稲刈":["稲刈る","田刈","刈稲","稲束","稲車","稲舟"],
-"稲扱き":["稲打ち","脱穀","稲埃"],
+"稲扱":["稲打ち","脱穀","稲埃"],
 "猪":["しし","野猪"],
 "茨の実":["野茨の実","野ばらの実"],
 "居待月":["座待月","居待","十八夜の月"],
@@ -4400,7 +4407,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "大秦の牛祭":["牛祭"],
 "鶉":["鶉篭"],
 "馬追":["すいつちょ","すいと","馬追虫"],
-"馬肥ゆる":["秋の馬","秋の駒"],
+"馬肥ゆ":["秋の馬","秋の駒"],
 "梅擬":["落霜紅","梅嫌"],
 "末枯":["末枯るる"],
 "盂蘭盆会":["盂蘭盆","盆","新盆","魂祭","精霊祭","魂棚","霊棚","盆供","瓜の牛","瓜の馬","茄子の牛","茄子の馬"],
@@ -4415,15 +4422,13 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "白粉花":["おしろいの花","花白粉","おしろい"],
 "落鮎":["錆鮎","渋鮎","下り鮎","子持鮎","秋の鮎"],
 "落穂":["落穂拾ひ"],
-"男郎花":["をとこめし"],
 "落し水":["水落す","田水落す","堰外す"],
 "囮":["囮番","囮守","囮篭"],
 "踊":["盆踊","踊子","踊笠","踊太鼓","踊唄","踊櫓"],
 "鬼貫忌":["槿花扇忌"],
-"女郎花":["をみなめし"],
 "面輪板":["星の貸物","貸し小袖"],
 "貝割菜":["貝割れ菜"],
-"案山子":["かかし","捨案山子"],
+"案山子":["捨案山子"],
 "柿":["甘柿","渋柿","富有柿","木守柿"],
 "懸巣":["樫鳥","橿鳥"],
 "鰍":["石伏","石斑魚","川をこぜ","ぐず"],
@@ -4445,10 +4450,10 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "啄木鳥":["けら","けらつつき","赤げら","青げら"],
 "絹雲":["巻雲"],
 "砧":["碪","砧打つ","衣打つ"],
-"茸":["菌","茸","茸飯","舞茸","ひら茸"],
+"茸":["菌","笑ひ茸","茸飯","舞茸","ひら茸","毒茸"],
 "黍":["黍の穂","黍畑"],
 "黍嵐":["芋嵐"],
-"休暇明け":["休暇果つ","二学期"],
+"休暇明":["休暇果つ","二学期"],
 "凶作":["不作","凶年"],
 "霧":["朝霧","夕霧","夜霧","山霧","川霧","狭霧","霧襖","霧雨","濃霧","霧笛"],
 "螽蟖":["ぎす","機織"],
@@ -4503,7 +4508,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "秋刀魚":["さいら","初さんま"],
 "石榴":["柘榴","実石榴"],
 "残菊":["残り菊","十日の菊"],
-"残暑":["残る暑さ","秋暑し","秋の暑さ","秋署"],
+"残暑":["残る暑さ","秋暑し","秋の暑さ","秋暑"],
 "椎の実":["落椎"],
 "紫苑":["紫苑の菊","しをに"],
 "鹿":["牡鹿","牝鹿","小牡鹿","鹿の声","鹿笛"],
@@ -4517,11 +4522,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "占地":["湿地","しめぢ茸"],
 "秋海棠":["断腸花"],
 "秋思":["秋あはれ","秋さびし","傷秋","秋意"],
-"秋雪":["秋の雪（あきのゆき）、秋の初雪（あきのはつゆき）"],
+"秋雪":["秋の雪、秋の初雪"],
 "終戦記念日":["終戦日","敗戦日","敗戦忌","八月十五日"],
 "生姜":["新生姜","葉生姜","薑"],
 "生姜市":["だらだらまつり"],
-"障子洗う":["障子貼る","障子の貼替"],
+"障子洗ふ":["障子貼る","障子の貼替"],
 "不知火":["竜燈"],
 "震災記念日":["震災忌","防災の日"],
 "新酒":["今年酒","早稲酒","新走","利酒","聞酒"],
@@ -4580,7 +4585,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "釣瓶落し":["秋の落日"],
 "照葉":["照紅葉"],
 "燈火親しむ":["燈火親し","燈下親し"],
-"冬瓜":["冬瓜（とうがん）","かもうり","冬瓜汁"],
+"冬瓜":["かもうり","冬瓜汁"],
 "唐辛子":["蕃椒","鷹の爪"],
 "玉蜀黍":["もろこし","南蛮黍"],
 "灯籠":["盆灯籠","切子灯籠","絵灯籠","高灯籠","花灯籠"],
@@ -4620,14 +4625,14 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "櫨ちぎり":["櫨採","櫨買"],
 "鯊釣":["鯊舟"],
 "肌寒":["肌寒し"],
-"八朔の祝":["田面（たのも）の節（せち）"],
+"八朔の祝":["田面の節"],
 "初秋":["新秋","孟秋","秋初め","秋口"],
 "初嵐":["秋の初風"],
 "初鴨":["鴨渡る","鴨来る"],
 "初潮":["葉月潮","望の潮"],
 "葉月":["月見月","萩月"],
 "鳩吹":["鳩吹く","鳩笛"],
-"花野":["花野原","花野道"],
+"花野":["花野原","花野道","大花野","花野風"],
 "柞":["柞紅葉","楢","小楢"],
 "海蠃廻し":["海打ち（ばいうち）","ばい独楽","べいごま"],
 "芭蕉":["芭蕉葉"],
@@ -4644,12 +4649,12 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鵯":["ひよ"],
 "鶸":["金雀"],
 "美男葛":["南五味子","実葛"],
-"瓢":["ひさご","瓢箪","青瓠","種瓢"],
+"瓢":["瓢箪","青瓠","種瓢"],
 "更待月":["更待","二十日月"],
 "五倍子":["ごばいし","ふし干す"],
 "五倍子":["五倍子（ごばいし）","ふし干す"],
 "臥待月":["臥待","寝待月","寝待"],
-"文月":["文月","七夕月"],
+"文月":["七夕月"],
 "冬支度":["冬用意"],
 "冬近し":["冬隣","冬を待つ"],
 "芙蓉":["花芙蓉","白芙蓉","紅芙蓉","酔芙蓉"],
@@ -4659,7 +4664,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "文化の日":["明治節","文化祭"],
 "糸瓜":["いとうり","ながうり","糸瓜棚"],
 "放屁虫":["へつぴりむし","へこきむし","椿象","亀虫"],
-"蛇穴に入る":["秋の蛇","穴まどひ"],
+"蛇穴に入る":["秋の蛇","穴惑ひ"],
 "べつたら市":["べつたら漬","浅漬市"],
 "弁慶草":["血止草"],
 "箒草":["箒木"],
@@ -4689,8 +4694,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "身に入む":["身に沁む"],
 "蓑虫":["鬼の子","蓑虫鳴く"],
 "茗荷の花":["秋茗荷"],
-"零余子":["ぬかご","いもご"],
-"零余子飯":["ぬかご飯"],
 "木槿":["きはちす","花木槿","白木槿","紅木槿","底紅","木槿垣"],
 "椋鳥":["むく","白頭扇"],
 "無患子":["無患子の実"],
@@ -4703,10 +4706,10 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "木犀":["金木犀","銀木犀","薄黄木犀","桂の花"],
 "鵙":["百舌鳥","鵙猛る","鵙の贄","鵙の声","鵙日和"],
 "籾":["籾干","籾摺","籾筵","籾臼","籾摺歌","籾殻焼く"],
-"紅葉":["紅葉","もみづる","色葉","夕紅葉","村紅葉","谷紅葉","紅葉山","紅葉川"],
+"紅葉":["もみづ","色葉","夕紅葉","村紅葉","谷紅葉","紅葉山","紅葉川"],
 "紅葉かつ散る":["色葉散る","色ながら散る"],
 "紅葉狩":["紅葉見","観楓","紅葉酒","紅葉茶屋"],
-"桃":["桃の実","白桃","水密桃"],
+"桃":["桃の実","白桃","水蜜桃"],
 "夜学":["夜学生","夜学子","夜学校"],
 "柳散る":["黄柳","秋の柳"],
 "八幡放生会":["石清水祭","男山祭","南祭","放生会"],
@@ -4719,7 +4722,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "行く秋":["去る秋","秋の別れ","秋の名残","秋の行方","秋去る","秋過ぐ"],
 "柚子":["柚子の実"],
 "柚味噌":["柚子味噌","柚子釜"],
-"夜寒":["宵寒","夜寒し"],
+"夜寒":["宵寒"],
 "吉田火祭":["吉田浅間祭","芒祭","火伏祭"],
 "夜長":["長き夜","夜長し"],
 "夜なべ":["夜仕事","夜業"],
@@ -4761,7 +4764,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "奥三河花祭":["花祭","花神楽","榊鬼"],
 "おくんち":["竜踊","くんち","おくにち"],
 "鴛鴦":["をし"],
-"落葉":["落葉","落葉焚","落葉掻","落葉篭","落葉期"],
+"落葉":["落葉","落葉焚","落葉掻","落葉籠","落葉期"],
 "乙字忌":["寒雷忌 二十日忌"],
 "おでん":["関東煮"],
 "御取越":["引上会"],
@@ -4780,14 +4783,14 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "杜父魚":["杜夫魚","霰魚","杜父魚","あられがこ"],
 "神楽":["御神楽","神楽歌","夜神楽","神遊び","庭燎"],
 "重ね着":["厚着"],
-"風花":["かぜはな","かざばな"],
+"風花":["吹越"],
 "風除":["風垣","風囲"],
-"火事":["大火","小火","類焼","半焼","近火","遠火事","火事見舞"],
-"春日万燈篭":["春日の万燈"],
+"火事":["大火","小火","類焼","半焼","近火","遠火事","昼火事","夜火事","火事見舞"],
+"春日万灯籠":["春日の万燈"],
 "粕汁":["酒の粕"],
 "風邪":["感冒","流行風邪","流感","風邪声","鼻風邪","風邪心地","風邪薬","風邪の神"],
 "門松立つ":["松飾る"],
-"蕪":["蕪","かぶらな","すずな","赤蕪"],
+"蕪":["かぶらな","すずな","赤蕪"],
 "鎌鼬":["鎌風"],
 "竈猫":["へつつひ猫","かじけ猫",""],
 "紙子":["紙衣"],
@@ -4814,10 +4817,10 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "枯芭蕉":["芭蕉枯る"],
 "枯芙蓉":["芙蓉の実"],
 "枯柳":["冬柳"],
-"革衣":["革ジャンパー","革ジャン","裘（かわごろも）"],
+"革衣":["革ジャンパー","革ジャン","裘"],
 "寒":["寒中","寒の内","寒九","寒四郎"],
 "寒猿":["寒の猿","冬の猿","かじけ猿"],
-"寒鴉":["寒鴉","冬鴉"],
+"寒鴉":["冬鴉"],
 "寒灸":["寒やいと"],
 "寒菊":["冬菊","霜菊","しまかんぎく"],
 "寒稽古":["寒中稽古","寒復習"],
@@ -4846,9 +4849,8 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "寒見舞":["寒中見舞","雪見舞"],
 "寒林":["寒木"],
 "外套":["オーバー","コート"],
-"北風":["北風","冬の風","朔風","寒風","北吹く"],
+"北風":["冬の風","朔風","寒風","北吹く"],
 "北窓塞ぐ":["北塞ぐ"],
-"狐":["きつ"],
 "狐火":["鬼火","狐の提灯"],
 "義士会":["義士会","義士討入の日"],
 "空也忌":["空也念仏"],
@@ -4870,11 +4872,9 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "厳寒":["極寒","酷寒","厳冬"],
 "氷":["厚氷","氷面鏡","氷点下","結氷"],
 "凍る":["氷る","凍つ","冱つ","凍む","冰る"],
-"木枯":["凩"],
 "炬燵":["切炬燵","置炬燵","掘炬燵"],
 "木の葉":["木の葉雨","木の葉散る"],
-"海鼠腸":["このわた"],
-"小春":["小春日","小春日和","小六月"],
+"小春":["小春日","小春日和","小春風","小六月"],
 "氷下魚":["氷下魚釣","氷下魚汁"],
 "蒟蒻掘る":["蒟蒻干す"],
 "御用納":["仕事納"],
@@ -4884,7 +4884,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "里神楽":["宮神楽","夜神楽","湯立神楽","遠山祭"],
 "寒し":["寒さ","寒気","寒冷"],
 "鮫":["鱶"],
-"三寒四温":["三寒","四温","四温日和"],
+"三寒四温":["三寒","四温","四温日和","四温晴"],
 "朱欒":["うちむらさき","文旦"],
 "塩鮭":["新巻"],
 "時雨":["時雨るる","朝時雨","夕時雨","小夜時雨","村時雨","片時雨"],
@@ -4914,7 +4914,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "炭":["炭火","埋火","消炭","炭斗","炭篭","炭売","炭屋","炭俵"],
 "炭焼":["炭焼小屋","炭焼竃","炭竃"],
 "青畝忌":["万両忌"],
-"咳":["咳く","咳く"],
+"咳":["咳く","しはぶき"],
 "節分":["大原雑魚寝"],
 "背蒲団":["肩蒲団","腰蒲団","負真綿"],
 "千両":["仙蓼","実千両"],
@@ -4923,7 +4923,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蕎麦掻":["蕎麦湯"],
 "橇":["馬橇","犬橇","手橇","雪車"],
 "雑炊":["おじや"],
-"鯛焼":["今川焼"],
 "鷹":["大鷹","小鷹","さしば","隼"],
 "鷹狩":["鷹匠","鷹野"],
 "沢庵":["沢庵漬","沢庵漬製す","大根漬く"],
@@ -4939,15 +4938,15 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "大根":["おほね","すずしろ","大根畑"],
 "大根引":["大根引"],
 "大根干す":["懸大根","干大根"],
-"ダイヤモンドダスト":["細氷"],
+"ダイヤモンドダスト":["細氷","氷霧","氷晶","氷塵"],
 "達磨忌":["初祖忌","少林忌"],
 "暖房":["スチーム","ヒーター","暖房車"],
 "近松忌":["巣林子忌"],
 "千鳥":["鵆","磯千鳥","浜千鳥","川千鳥","夕千鳥","小夜千鳥","群千鳥","友千鳥","遠千鳥","鳴く千鳥"],
 "ちやんちやんこ":["袖無"],
 "追儺":["鬼やらひ","なやらひ"],
-"石蕗の花":["つ吾の花","石蕗の花","石蕗"],
-"冷たし":["底冷え"],
+"石蕗の花":["石蕗"],
+"冷たし":["底冷"],
 "氷柱":["垂氷","草氷柱"],
 "鶴":["凍鶴","冬の鶴"],
 "手袋":["皮手袋","マフ"],
@@ -4985,7 +4984,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "芭蕉忌":["時雨忌","桃青忌","翁忌"],
 "避寒":["避寒宿"],
 "日向ぼこ":["日向ぼつこ","日向ぼこり"],
-"火の番":["夜番","夜廻","夜警","寒柝"],
+"火の番":["夜番","夜廻","夜警","寒柝","火の用心"],
 "火鉢":["火桶","手焙","手炉"],
 "柊挿す":["焼嗅し"],
 "柊の花":["花柊"],
@@ -5002,7 +5001,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "衾":["紙衾"],
 "襖":["唐紙"],
 "札納":["納札"],
-"蒲団":["干蒲団"],
+"蒲団":["布団","干蒲団","敷布団","掛蒲団","羽蒲団","蒲団干す"],
 "吹雪":["地吹雪","雪煙","雪浪"],
 "冬":["三冬","九冬","玄冬","冬帝","冬将軍"],
 "冬暖か":["暖冬","冬ぬくし"],
@@ -5038,8 +5037,8 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "冬の蝶":["冬蝶","凍蝶"],
 "冬の月":["寒月","冬三日月","月冴ゆ","月氷る"],
 "冬の鳥":["寒禽"],
-"冬の波":["冬浪","冬涛","寒涛","冬怒濤"],
-"冬の蠅":["冬蝿"],
+"冬の波":["冬浪","冬濤","寒濤","冬怒濤"],
+"冬の蠅":["冬蠅"],
 "冬の蜂":["冬蜂","凍蜂"],
 "冬の日":["冬日","冬日向","冬日影"],
 "冬の灯":["冬灯","冬ともし","寒灯"],
@@ -5050,12 +5049,12 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "冬の夕焼":["寒夕焼","冬茜","寒茜","寒落暉"],
 "冬の夜":["夜半の冬","寒夜"],
 "冬の雷":["寒雷"],
-"冬晴":["冬日和","冬麗","冬うらら"],
+"冬晴":["冬日和"],
 "冬旱":["寒旱"],
 "冬深し":["冬深む","暮の冬","真冬"],
 "冬服":["冬着","冬シャツ","皮羽織"],
 "冬帽子":["冬帽"],
-"冬萌":["冬木の芽","冬芽"],
+"冬芽":["冬木の芽","冬萌"],
 "冬館":["冬の家","冬の宿"],
 "古暦":["暦の果","暦の終り"],
 "風呂吹":["風呂吹大根"],
@@ -5072,7 +5071,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "頬被":["ほほかぶり"],
 "牡丹焚火":["牡丹焚く","牡丹供養"],
 "牡丹鍋":["猪鍋","山鯨","猪肉"],
-"ボロ市":["世田谷襤褸市"],
+"ぼろ市":["世田谷襤褸市"],
 "ポインセチア":["猩々木","クリスマスフラワー"],
 "鮪":["鮪船","鮪釣"],
 "ずわい蟹":["松葉蟹","越前蟹"],
@@ -5105,7 +5104,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "厄払":["厄落","厄の薪","ふぐり落し"],
 "ヤッケ":["アノラック"],
 "八手の花":["花八手"],
-"藪柑子":["薮柑子"],
 "藪巻":["竹巻","菰巻"],
 "山眠る":["眠る山"],
 "雪":["六花","雪の華","小雪","大雪","深雪","粉雪","綿雪","細雪","小米雪","根雪","飛雪","雪明り","雪の声","朝の雪","夜の雪","暮雪","雪の宿","雪国","雪空"],
@@ -5115,7 +5113,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "雪掻":["除雪","除雪車","ラッセル車"],
 "雪囲":["雪垣","雪構","雪除","墓囲"],
 "雪合羽":["雪蓑"],
-"雪沓":["藁沓","爪篭"],
+"雪沓":["藁沓","爪籠"],
 "雪しまき":["しまき"],
 "雪女郎":["雪女","雪坊主"],
 "雪達磨":["雪兎","雪釣"],
