--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,8 @@ let RAW = [
   {w:'清涼飲料水',k:'せいりょういんりょうすい',s:'夏',p:'三夏',c:'生活'},
   {w:'ソーダ水',k:'そーだすい',s:'夏',p:'三夏',c:'生活'},
   {w:'サイダー',k:'さいだー',s:'夏',p:'三夏',c:'生活'},
+  {w:'アイスコーヒー',k:'あいすこーひー',s:'夏',p:'三夏',c:'生活'},
+  {w:'アイスティー',k:'あいすてぃー',s:'夏',p:'三夏',c:'生活'},
   {w:'氷菓',k:'ひょうか',s:'夏',p:'三夏',c:'生活'},
   {w:'葛餅',k:'くずもち',s:'夏',p:'三夏',c:'生活'},
   {w:'葛切',k:'くずきり',s:'夏',p:'三夏',c:'生活'},
@@ -2879,6 +2881,7 @@ let RAW = [
   {w:'マフラー',k:'まふらー',s:'冬',p:'三冬',c:'生活'},
   {w:'手袋',k:'てぶくろ',s:'冬',p:'三冬',c:'生活'},
   {w:'マスク',k:'ますく',s:'冬',p:'三冬',c:'生活'},
+  {w:'ホットドリンクス',k:'ホットドリンクス',s:'冬',p:'三冬',c:'生活'},
   {w:'熱燗',k:'あつかん',s:'冬',p:'三冬',c:'生活'},
   {w:'玉子酒',k:'たまござけ',s:'冬',p:'三冬',c:'生活'},
   {w:'葛湯',k:'くずゆ',s:'冬',p:'三冬',c:'生活'},
@@ -3391,11 +3394,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蘆の角":["あしかび","蘆の芽","角組む蘆","蘆の錐"],
 "蘆の若葉":["若蘆"],
 "馬酔木の花":["花馬酔木","あせび","あせみ"],
-"アスパラガス":["松葉独活（まつばうど）"],
+"アスパラガス":["松葉独活（まつばうど）","オランダ雉隠し"],
 "アズマイチゲ":["東一華"],
 "東菊":["吾妻菊"],
 "畦塗":["畔塗","塗畦"],
-"暖か":["ぬくし","春暖"],
+"暖か":["ぬくし","あたたかし","あたたけし","春暖"],
 "海女":["磯人","かつぎ","もぐり","海女の笛"],
 "甘茶":["仏の産湯","五香水","甘茶仏","甘茶寺","灌仏","浴仏"],
 "杏の花":["からももの花","花杏","杏花村"],
@@ -3420,23 +3423,22 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鷽":["琴弾鳥","照鷽","雨鷽","鷽姫"],
 "独活":["芋独活","山独活","もやし独活","独活掘る"],
 "海胆":["雲丹","海栗"],
-"苜蓿":["クローバ","白詰草"],
-"厩出し":["まやだし"],
-"梅":["好文木","花の兄","春告草","野梅","白梅","臥竜梅","豊後梅","枝垂梅","盆梅","老梅","梅が香","梅林","梅園"],
+"苜蓿":["クローバー","白詰草"],
+"梅":["梅の花","好文木","花の兄","春告草","野梅","白梅","臥竜梅","豊後梅","枝垂梅","盆梅","老梅","梅が香","梅林","梅園"],
 "梅見":["観梅","梅見茶屋"],
 "梅若忌":["梅若祭","梅若参"],
 "麗か":["うらら","うららけし","うららに","日うらうら","うらうら","麗日"],
 "海老根":["えびねらん","化偸草","蝦根"],
 "絵踏":["踏絵","寺請証文"],
 "会陽":["西大寺参","神木","裸押し","修正会"],
-"魞挿す":["えり場","えり簀"],
+"魞挿す":["魞場","魞簀"],
 "豌豆の花":["グリンピース","スイートピー"],
 "桜桃の花":["さくらんぼの花","西洋実桜"],
 "黄梅":["迎春花"],
 "小賀玉の花":["小賀玉","招霊"],
 "オキザリス":["はなかたばみ"],
 "苧環の花":["苧環","いとくり","糸繰草"],
-"御告祭":["告知祭","お告げ祭"],
+"御告祭":["告知祭","受胎告知日","聖母祭"],
 "落し角":["鹿の角落つ","忘れ角"],
 "朧月":["月朧","朧夜","朧月夜"],
 "お水取":["水取","若狭の井"],
@@ -3445,7 +3447,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "海棠":["花海棠","眠花","ねむれる花"],
 "貝寄風":["貝寄"],
 "楓の花":["花楓"],
-"蛙":["蛙（かわず）","殿様蛙","赤蛙","土蛙","初蛙","遠蛙","昼蛙","夕蛙","蛙合戦"],
+"蛙":["殿様蛙","赤蛙","土蛙","初蛙","遠蛙","昼蛙","夕蛙","蛙合戦"],
 "帰る雁":["帰雁","雁帰る","行く雁","去る雁","雁の別れ"],
 "垣繕ふ":["垣手入れ"],
 "陽炎":["糸遊","糸子","遊糸","野馬","かぎろひ"],
@@ -3456,7 +3458,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "数の子製す":["数の子干す","新数の子"],
 "風光る":["光る風"],
 "片栗の花":["かたかごの花"],
-"蝌蚪":["蛙子","蛙の子","お玉杓子","蛙生る","蝌蚪生る","蝌蚪の紐"],
+"蝌蚪":["蛙子","蛙の子","お玉杓子","蛙生る","蝌蚪生る","蝌蚪の紐","蝌蚪の国"],
 "髢草":["雛草","鬘草"],
 "芥菜":["芥子菜"],
 "鴉の巣":["鳥の巣"],
@@ -3471,7 +3473,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "菊の苗":["菊の芽"],
 "細螺":["きしゃご"],
 "如月":["衣更着（きさらぎ）"],
-"雉":["雉子","きぎす","きぎし","雉のほろろ"],
+"雉":["雉子","きぎし","雉のほろろ"],
 "黄水仙":["糸水仙"],
 "北野菜種御供":["北野御忌日","天神御忌","梅花祭","梅花御供","道真忌","菜種の神事"],
 "木流し":["修羅落し","初筏"],
@@ -3485,7 +3487,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "虚子忌":["椿寿忌"],
 "金盞花":["常春花","長春花"],
 "金鳳花":["さんぽうげ","馬の脚形","駒の脚形"],
-"義士祭":["義士祭"],
 "御忌":["法然忌","円光忌","御忌詣","御忌参","御忌の寺","御忌の鐘","御忌小袖","弁当始"],
 "茎立":["くきだち"],
 "枸杞の芽":["枸杞芽","枸杞飯"],
@@ -3500,7 +3501,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "華鬘草":["華鬘牡丹","けまん","瓔珞牡丹","藤牡丹","鯛釣草"],
 "建国記念日":["建国の日","建国祭","紀元節"],
 "紫雲英":["蓮華草","げんげん","五形花"],
-"霾":["黄砂","霾ぐもり","霾風","霾天","黄塵","黄砂降る"],
+"霾":["黄砂","霾ぐもり","蒙古風","霾風","霾天","黄塵万丈","黄砂降る"],
 "紅梅":["薄紅梅"],
 "氷解":["氷解く","氷消ゆ","解氷","浮氷"],
 "蚕飼":["養蚕","種紙","毛蚕","掃立","蚕の眠り","飼屋","蚕棚","蚕室","蚕籠","捨蚕","蚕飼時"],
@@ -3511,9 +3512,8 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "辛夷":["木筆","山木蘭","幣辛夷","やまあららぎ"],
 "ゴールデンウィーク":["黄金週間"],
 "西行忌":["円位忌","山家忌"],
-"サイネリア":["シネラリア","蕗菊","富貴菊","蕗桜"],
+"シネラリア":["サイネリア","蕗菊","富貴菊","蕗桜"],
 "冴返る":["凍返る","寒戻る"],
-"囀":["百千鳥"],
 "嵯峨大念仏":["嵯峨念仏","融通念仏","花念仏","嵯峨大念仏狂言"],
 "嵯峨の柱炬":["嵯峨御松明","柱松明"],
 "桜":["彼岸桜","枝垂桜","糸桜","大山桜","大島桜","富士桜","豆桜","霞桜","嶺桜","深山桜","丁子桜","牡丹桜","里桜","染井吉野","朝桜","夕桜","夜桜","若桜","老桜"],
@@ -3545,11 +3545,11 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "芝焼く":["芝焼","芝火"],
 "謝肉祭":["カーニバル","カルナバル"],
 "修二会":["二月堂の行","お松明"],
-"春菊":["しゅん蒿","高麗菊","菊菜"],
+"春菊":["春蒿","高麗菊","菊菜"],
 "春暁":["春の暁","春の曙","春の朝"],
 "春光":["春の光","春色","春の色","春望"],
 "春社":["社日","社日様","社日参","社翁の雨"],
-"春愁":["春愁","春愁ふ","春かなし","春思"],
+"春愁":["春愁ふ","春かなし","春思"],
 "春塵":["春の塵","春埃"],
 "春昼":["春の昼"],
 "春潮":["春の潮"],
@@ -3568,10 +3568,10 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蜃気楼":["海市","山市","蜃楼","蜃市","喜見城","かいやぐら","きつねだな"],
 "地虫穴を出づ":["地虫出づ","蟻穴を出づ","蜥蜴出づ"],
 "十三詣":["知恵詣","知恵貰ひ"],
-"入学試験":["受験","受験生","受験期","試験","卒業試験","及第","落第","大試験"],
+"入学試験":["受験","受験生","受験期","合格","及第"],
 "受難節":["受苦節","受難週"],
 "沈丁花":["沈丁","丁字","瑞香","芸香"],
-"酸葉":["すかんぽ","酸模（すいば）","すいすい"],
+"酸葉":["すかんぽ","酸模","すいすい"],
 "杉菜":["接ぎ松"],
 "末黒の芒":["焼野の芒","黒生の芒"],
 "鈴懸の花":["プラタナスの花"],
@@ -3593,7 +3593,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "耕":["耕す","春耕","耕人","耕馬","耕牛","馬耕","耕耘機"],
 "多喜二忌":["多喜二の忌"],
 "竹の秋":["竹秋"],
-"凧":["紙鳶","いかのぼり","宇凧","絵凧","奴凧","切凧","懸凧","はた"],
+"凧":["紙鳶","宇凧","絵凧","奴凧","切凧","懸凧","はた"],
 "田螺":["田螺鳴く","田螺取"],
 "種芋":["芋種","種薯","芋の芽"],
 "種選":["種選り"],
@@ -3604,7 +3604,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "蒲公英":["鼓草","藤菜","蒲公英の絮"],
 "大根の花":["花大根","種大根"],
 "暖炉納む":["暖炉外す","ストーブ除く"],
-"萵苣":["かきぢしや","レタス"],
+"萵苣":["レタス"],
 "遅春":["春遅し","春遅々"],
 "遅日":["遅き日","暮遅し","暮かぬる","夕永し"],
 "茶摘":["一番茶","茶摘時","茶摘女","茶摘唄","茶摘籠","茶摘笠","茶山","茶畑","茶園"],
@@ -3624,7 +3624,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "土佐水木":["蝋弁花"],
 "鶏合":["闘鶏","鶏の蹴合","勝鶏","負鶏"],
 "鳥帰る":["小鳥帰る","鳥引く","引鳥"],
-"鳥雲に入る":["鳥雲に"],
+"鳥雲に入る":["鳥雲に","雲に入る鳥"],
 "鳥曇":["鳥曇","鳥風"],
 "鳥交る":["鳥つるむ","孕鳥","鳥の恋"],
 "鳥の巣":["小鳥の巣","巣組み","巣籠","巣隠","巣鳥","古巣"],
@@ -3640,7 +3640,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "菜の花":["花菜","菜種の花","油菜","菜種菜","花菜雨","花菜風"],
 "苗代":["苗田","苗代田","種案山子","苗代時","苗代寒"],
 "二月":["二月尽"],
-"逃げ水":["逃水"],
 "鰊":["鯡","春告魚","鰊群来","鰊漁","鰊舟","鰊曇"],
 "蜷":["みな","河貝子","海蜷","河蜷","蜷の道"],
 "入学":["入学式","入学児","新入生","一年生","入園","進学"],
@@ -3659,7 +3658,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "根分":["菖蒲根分"],
 "野遊":["山遊び","野がけ","春遊び","ピクニック"],
 "乗込鮒":["乗つ込み","初鮒","春の鮒","春鮒釣り"],
-"長閑":["長閑さ","のどけし","のどけさ"],
+"長閑":["長閑さ","のどけし","のどけさ","駘蕩"],
 "野蒜":["ひる"],
 "野焼く":["野焼","野火","草焼く"],
 "海苔":["甘海苔","岩海苔","海苔篊","海苔粗朶","海苔舟","海苔採","海苔掻く","海苔干す"],
@@ -3696,7 +3695,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "春惜しむ":["惜春","三月尽","弥生尽","四月尽"],
 "春北風":["春北風（はるならい）"],
 "春炬燵":["春の炬燵"],
-"春雨":["春の雨","春霖"],
+"春雨":["春の雨","春霖","暖雨"],
 "春寒":["春寒し","寒き春","春寒（しゅんかん）","料峭"],
 "春時雨":["春の驟雨"],
 "春田":["春の田","げんげ田","花田"],
@@ -3720,14 +3719,14 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "春蝉":["松蝉","春の蝉","松蝉"],
 "春の空":["春空","春天"],
 "春の筍":["春笋"],
-"春の月":["春月","春月夜","春満月"],
+"春の月":["春月","春月夜","春満月","春三日月"],
 "春の鳥":["春禽","貌鳥"],
 "春の波":["春の浪","春濤","春怒濤","春の川波"],
 "春の虹":["初虹"],
 "春の野":["春野","はるぬ","春郊"],
-"春の日":["春日","春日","春日影"],
-"春灯":["春燈","春の燈","春ともし","春の燭"],
-"春の星":["春星"],
+"春の日":["春日","春日影"],
+"春灯":["春の灯","春ともし","春の燭"],
+"春の星":["春星","春北斗"],
 "春の水":["春水","水の春"],
 "春の霙":["春霙"],
 "春の山":["春山","春嶺","弥生山","春山辺"],
@@ -3741,14 +3740,14 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "春深し":["春闌く","春更く","春深む"],
 "春めく":["春動く","春きざす"],
 "春竜胆":["筆竜胆","苔竜胆"],
-"榛の花":["榛の花","赤楊の花"],
+"榛の花":["赤楊の花"],
 "薔薇の芽":["茨の芽"],
 "バレンタインデー":["バレンタインの日","愛の日"],
 "彼岸":["お彼岸","入彼岸","彼岸過ぎ","彼岸婆"],
 "彼岸会":["彼岸詣","彼岸参","彼岸寺","お中日","彼岸団子","彼岸餅"],
 "引鴨":["行く鴨","帰る鴨","鴨帰る"],
 "引鶴":["鶴帰る","帰る鶴","去る鶴","残る鶴"],
-"鹿尾菜":["鹿尾菜","ひじき刈"],
+"鹿尾菜":["羊栖菜","ひじき刈"],
 "干鱈":["ほしだら","棒鱈"],
 "羊の毛刈る":["羊毛剪る","羊剪毛","剪毛期"],
 "ひとで":["海星"],
@@ -3758,7 +3757,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "日永":["永き日","永日","日永し"],
 "雛菊":["長命菊","延命菊","ときしらず","デージー"],
 "雛流し":["雛送り","流し雛","捨雛"],
-"雛祭":["雛","ひひな","雛遊び","雛飾","雛人形","内裏雛","官女雛","五人囃","男雛","女雛","紙雛","立雛","土雛","雛壇","雛の調度","雛道具","雛菓子","雛あられ","雛の燈","雛の客","雛の宴","雛の宿","吊し雛"],
+"雛祭":["雛","ひひな","雛の日","雛遊び","雛飾","雛人形","内裏雛","官女雛","五人囃","男雛","女雛","紙雛","立雛","土雛","雛壇","雛の調度","雛道具","雛菓子","雛あられ","雛の燈","雛の客","雛の宴","雛の宿","吊し雛"],
 "雲雀":["告天子","初雲雀","揚雲雀","落雲雀","朝雲雀","夕雲雀","雲雀野","雲雀籠","雲雀笛","叫天子"],
 "ヒヤシンス":["風信子"],
 "ビキニ忌":["ビキニデー"],
@@ -3766,10 +3765,10 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "風船":["風船玉","紙風船","ゴム風船","風船売"],
 "蕗の薹":["蕗の芽","蕗の花","春の蕗"],
 "藤":["藤の花","白藤","山藤","藤の房","藤浪","藤棚","藤の昼"],
-"復活祭":["イースター","聖週間","染卵","彩（いろ）卵"],
+"復活祭":["イースター","聖週間","染卵","彩卵"],
 "二日灸":["二日灸","春の灸"],
 "仏生会":["灌仏会","降誕会","誕生会","浴仏会","花祭","花御堂","花の塔","花亭"],
-"鞦韆":["秋千","ぶらんこ","ふらここ","ふらんと","半仙戯"],
+"鞦韆":["秋千","ふらここ","ふらんと","半仙戯"],
 "蛇穴を出づ":["蛇出づ"],
 "ヘリオトロープ":["香水木"],
 "遍路":["お遍路","遍路笠","遍路杖","遍路道","遍路寺","遍路宿","善根宿","四国巡り","一国巡り","島四国"],
@@ -3787,7 +3786,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "豆の花":["花豆"],
 "金縷梅":["銀縷梅","まんさくの花"],
 "御影供":["御影講","大師忌","空海忌","弘法忌"],
-"水草生ふ":["水草生ふ","藻草生ふ"],
+"水草生ふ":["藻草生ふ"],
 "水菜":["京菜","壬生菜"],
 "水温む":["温む水"],
 "三葉芹":["みつば"],
@@ -3833,14 +3832,14 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "雪割草":["洲浜草"],
 "行く春":["春行く","春終る","逝春","春尽く"],
 "山桜桃の花":["英桃"],
-"余寒":["残る寒さ"],
+"余寒":["残る寒さ","残寒"],
 "吉野の花会式":["吉野の会式","花会式","鬼踊","餅配"],
 "嫁菜":["萩菜","よめがはぎ","嫁菜飯"],
 "蓬":["餅草","艾草","さしも草","蓬生","蓬摘む"],
 "ライラック":["リラの花"],
 "落花":["散る桜","花吹雪","飛花","花散る","花屑","花の塵","紅雨","花筏"],
 "利休忌":["利久忌","宗易忌"],
-"立春":["春立つ","春来る","立春大吉（りっしゅんだいきち）"],
+"立春":["春立つ","春来る","立春大吉"],
 "柳絮":["柳の絮","柳の花","柳絮飛ぶ"],
 "龍天に昇る":["竜天に登る"],
 "流氷":["氷流る","流氷期"],
@@ -4325,6 +4324,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "向日葵":["日車","日輪草","天蓋花","天竺葵"],
 "姫女宛":["柳葉姫菊","鉄道草"],
 "日焼":["潮焼"],
+"氷菓":["氷菓子","アイスキャンデー","アイスクリーム","ソフトクリーム","シャーベット","ジェラート"]
 "蜜柑の花":["花蜜柑"],
 "夕立":["ゆだち","白雨","驟雨","夕立雲","夕立風","スコール","片降"],
 "冷酒":["冷し酒"],
@@ -4412,7 +4412,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "末枯":["末枯るる"],
 "盂蘭盆会":["盂蘭盆","盆","新盆","魂祭","精霊祭","魂棚","霊棚","盆供","瓜の牛","瓜の馬","茄子の牛","茄子の馬"],
 "浮塵子":["ぬかばへ","こぬかむし"],
-"運動会":["秋季運動会"],
 "枝豆":["月見豆"],
 "狗尾草":["猫じゃらし"],
 "蝦蔓":["えびづる","えびかづら"],
@@ -4438,7 +4437,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "南瓜":["たうなす","なんきん","ぼうぶら","鹿ヶ谷南瓜"],
 "蟷螂":["たうらう","鎌切","斧虫","疣毟","いぼむしり"],
 "萱":["萱の穂","萱原"],
-"雁":["雁","かりがね","真雁","菱喰","初雁","雁渡る","雁来る","雁の列","雁の棹","雁行","雁の声","落雁"],
+"雁":["かりがね","真雁","菱喰","初雁","雁渡る","雁来る","雁の列","雁の棹","雁行","雁の声","落雁"],
 "刈田":["刈田道","刈田嵐"],
 "雁渡し":["青北風"],
 "榠櫨の実":["花梨の実"],
@@ -4488,10 +4487,8 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "解夏":["夏明","夏の果","仏歓喜日","送行","夏書納"],
 "源義忌":["秋燕忌"],
 "柑子":["柑子蜜柑"],
-"黄葉":["黄葉"],
 "黄落":["黄落期"],
 "蟋蟀":["蛬","こほろぎ","ちちろ","ちちろ虫","つづれさせ"],
-"古酒":["古酒"],
 "コスモス":["秋桜","おほはるしやぎく"],
 "小鳥狩":["小鳥網","霞網","鳥屋師","ひるてん","高はご"],
 "木の実":["木の実落つ","木の実降る","木の実雨","木の実独楽"],
@@ -4528,7 +4525,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "生姜市":["だらだらまつり"],
 "障子洗ふ":["障子貼る","障子の貼替"],
 "不知火":["竜燈"],
-"震災記念日":["震災忌","防災の日"],
+"震災記念日":["震災忌","防災の日","関東大震災"],
 "新酒":["今年酒","早稲酒","新走","利酒","聞酒"],
 "新蕎麦":["走り蕎麦"],
 "新松子":["青松毬"],
@@ -4552,7 +4549,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "芋茎":["いもがら"],
 "背高泡立草":["大泡立草","泡立草","秋の麒麟草"],
 "施餓鬼":["施餓鬼会","施餓鬼寺","施餓鬼幡","川施餓鬼","船施餓鬼"],
-"鶺鴒":["石たたき","庭たたき","黄鶺鴒","背黒鶺鴒"],
+"鶺鴒":["石叩","庭叩","黄鶺鴒","背黒鶺鴒","白鶺鴒"],
 "添水":["僧都","ばつたんこ","鹿威し"],
 "藁麦刈":["刈藁麦","藁麦干す"],
 "蕎麦の花":["花蕎麦"],
@@ -4562,7 +4559,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "茸狩":["茸狩","茸とり","菌狩","茸篭","茸筵","茸山"],
 "立待月":["立待","十七夜"],
 "蓼の花":["蓼の穂","穂蓼","大毛蓼"],
-"七夕":["七夕祭","星祭","星合","星迎","星今宵","二星","牽牛","織女","七夕竹","七夕流し","願ひの糸","七夕雨･洗車雨"],
+"七夕":["七夕祭","星祭","星合","星迎","星今宵","二星","牽牛","織女","七夕竹","七夕流し","願ひの糸","七夕雨","洗車雨"],
 "種茄子":["種茄子"],
 "煙草の花":["花煙草"],
 "大豆":["新大豆","みそ豆"],
@@ -4584,7 +4581,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鶴来る":["鶴渡る","田鶴渡る"],
 "釣瓶落し":["秋の落日"],
 "照葉":["照紅葉"],
-"燈火親しむ":["燈火親し","燈下親し"],
+"灯火親しむ":["灯火親し"],
 "冬瓜":["かもうり","冬瓜汁"],
 "唐辛子":["蕃椒","鷹の爪"],
 "玉蜀黍":["もろこし","南蛮黍"],
@@ -4600,7 +4597,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "団栗":["櫟の実"],
 "薯蕷":["長薯"],
 "長月":["菊月"],
-"梨":["有の実","水梨","洋梨 ラ","フランス"],
+"梨":["有の実","水梨","洋梨","ラ・フランス"],
 "刀豆":["鉈豆"],
 "棗の実":["棗"],
 "撫子":["川原撫子","大和撫子"],
@@ -4637,7 +4634,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "海蠃廻し":["海打ち（ばいうち）","ばい独楽","べいごま"],
 "芭蕉":["芭蕉葉"],
 "螇蚚":["飛蝗","蟿螽","はたはた","きちきち","きちきちばつた","とのさまばった","精霊ばった"],
-"晩秋":["晩秋"],
 "蜩":["日暮","茅蜩","かなかな"],
 "菱の実":["菱採る","茹菱"],
 "鶲":["尉鶲","火焚鳥"],
@@ -4652,7 +4648,6 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "瓢":["瓢箪","青瓠","種瓢"],
 "更待月":["更待","二十日月"],
 "五倍子":["ごばいし","ふし干す"],
-"五倍子":["五倍子（ごばいし）","ふし干す"],
 "臥待月":["臥待","寝待月","寝待"],
 "文月":["七夕月"],
 "冬支度":["冬用意"],
@@ -4660,7 +4655,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "芙蓉":["花芙蓉","白芙蓉","紅芙蓉","酔芙蓉"],
 "普羅忌":["立秋忌"],
 "風炉の名残":["風炉名残","名残の茶"],
-"葡萄":["葡萄園","葡萄棚"],
+"葡萄":["マスカット","巨峰","ピオーネ","デラウェア","葡萄狩","葡萄園","葡萄棚"],
 "文化の日":["明治節","文化祭"],
 "糸瓜":["いとうり","ながうり","糸瓜棚"],
 "放屁虫":["へつぴりむし","へこきむし","椿象","亀虫"],
@@ -4697,7 +4692,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "木槿":["きはちす","花木槿","白木槿","紅木槿","底紅","木槿垣"],
 "椋鳥":["むく","白頭扇"],
 "無患子":["無患子の実"],
-"虫":["虫の声","虫の音","虫時雨","虫の秋","昼の虫","残る虫","すがれ虫"],
+"虫":["虫の声","虫の音","虫時雨","虫の秋","昼の虫","残る虫","すがれ虫","虫の闇"],
 "虫売":["虫屋"],
 "郁子":["うべ","郁子の実"],
 "紫式部":["実紫","小式部","白式部"],
@@ -4778,7 +4773,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "帰り花":["返り花","忘れ花","狂ひ花","狂ひ咲き"],
 "顔見世":["顔見勢"],
 "牡蠣":["真牡蠣","酢牡蠣","牡蠣飯"],
-"牡蠣船":["牡蛎料理","牡蛎鍋"],
+"牡蠣船":["牡蠣料理","牡蠣鍋"],
 "牡蠣剥く":["牡蠣割る","牡蠣割女"],
 "杜父魚":["杜夫魚","霰魚","杜父魚","あられがこ"],
 "神楽":["御神楽","神楽歌","夜神楽","神遊び","庭燎"],
@@ -4788,7 +4783,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "火事":["大火","小火","類焼","半焼","近火","遠火事","昼火事","夜火事","火事見舞"],
 "春日万灯籠":["春日の万燈"],
 "粕汁":["酒の粕"],
-"風邪":["感冒","流行風邪","流感","風邪声","鼻風邪","風邪心地","風邪薬","風邪の神"],
+"風邪":["感冒","流行風邪","流感","インフルエンザ","風邪声","鼻風邪","風邪籠","風邪心地","風邪薬","風邪の神"],
 "門松立つ":["松飾る"],
 "蕪":["かぶらな","すずな","赤蕪"],
 "鎌鼬":["鎌風"],
@@ -4887,7 +4882,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "三寒四温":["三寒","四温","四温日和","四温晴"],
 "朱欒":["うちむらさき","文旦"],
 "塩鮭":["新巻"],
-"時雨":["時雨るる","朝時雨","夕時雨","小夜時雨","村時雨","片時雨"],
+"時雨":["しぐるる","朝時雨","夕時雨","小夜時雨","村時雨","片時雨"],
 "七五三":["七五三の祝","七五三祝","千歳飴"],
 "凍豆腐":["氷豆腐","寒豆腐","高野豆腐","凍豆腐造る"],
 "霜":["霜の花","大霜","深霜","強霜","朝霜","夜霜","霜晴","霜凪","霜雫","霜解","霜の声"],
@@ -4944,12 +4939,12 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "近松忌":["巣林子忌"],
 "千鳥":["鵆","磯千鳥","浜千鳥","川千鳥","夕千鳥","小夜千鳥","群千鳥","友千鳥","遠千鳥","鳴く千鳥"],
 "ちやんちやんこ":["袖無"],
-"追儺":["鬼やらひ","なやらひ"],
+"追儺":["鬼やらひ","なやらひ","豆撒","豆打","福豆","年の豆","鬼打豆","鬼は外","福は内","年男"],
 "石蕗の花":["石蕗"],
 "冷たし":["底冷"],
-"氷柱":["垂氷","草氷柱"],
+"氷柱":["垂氷","草氷柱","軒氷柱","氷笋"],
 "鶴":["凍鶴","冬の鶴"],
-"手袋":["皮手袋","マフ"],
+"手袋":["皮手袋"],
 "冬至":["冬至粥","冬至南瓜"],
 "年木樵":["節木樵","年木積む","年木売"],
 "年越":["年を越す"],
@@ -4968,7 +4963,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "煮凝":["煮凍"],
 "日記買ふ":["古日記"],
 "人参":["胡蘿蔔"],
-"葱":["葱","一文字","根深","葉葱","葱畑"],
+"葱":["一文字","根深","葉葱","葱畑"],
 "根深汁":["葱汁"],
 "ねんねこ":["ねんねこばんてん"],
 "年末賞与":["年末手当","ボーナス","賞与"],
@@ -5064,25 +5059,24 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鰤網":["鰤場"],
 "碧梧桐忌":["寒明忌"],
 "報恩講":["御正忌","御七夜","御講","御霜月","親鸞忌"],
-"捕鯨":["捕鯨船"],
+"捕鯨":["捕鯨船","いさなとり"],
 "干菜吊る":["干菜","懸菜","吊菜","干葉"],
 "榾":["ほた","榾火","榾明り"],
 "朴落葉":["朴散る"],
 "頬被":["ほほかぶり"],
 "牡丹焚火":["牡丹焚く","牡丹供養"],
 "牡丹鍋":["猪鍋","山鯨","猪肉"],
-"ぼろ市":["世田谷襤褸市"],
+"ぼろ市":["世田谷ぼろ市"],
 "ポインセチア":["猩々木","クリスマスフラワー"],
 "鮪":["鮪船","鮪釣"],
 "ずわい蟹":["松葉蟹","越前蟹"],
-"豆撒":["豆打","年の豆","鬼打豆","鬼は外","福は内","年男"],
 "マント":["二重廻し","トンビ","インバネス"],
 "万両":["実万両"],
 "蜜柑":["蜜柑山","蜜柑狩"],
 "三島忌":["憂国忌"],
 "水涸る":["川涸る","沼涸る","滝涸る"],
 "水鳥":["浮寝鳥"],
-"水洟":["鼻水"],
+"水洟":["水つ洟","鼻水"],
 "瑞穂":["穂田"],
 "晦日蕎麦":["年越蕎麦","つごもり蕎麦"],
 "鷦鷯":["三十三才"],
@@ -5124,6 +5118,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "雪催":["雪雲","雪げ","雪曇"],
 "雪焼":["雪眼"],
 "行く年":["年逝く","年流る","年送る"],
+"湯気立て":["加湿器"]
 "柚子湯":["柚子風呂","冬至湯"],
 "湯婆":["たんぽ"],
 "夜着":["掻巻","小夜着"],
@@ -5152,7 +5147,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "白朮詣":["白朮祭","白朮火","白朮縄","火縄売","祇園削掛の神事"],
 "御降":["富正月"],
 "鬼打木":["鬼木"],
-"女正月":["女正月"],
+"女正月":["めしょうがつ"],
 "買初":["初買"],
 "傀儡師":["傀儡","夷廻し","木傀廻し"],
 "鏡開":["鏡割"],
@@ -5274,10 +5269,10 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "初湯":["初風呂","湯殿始"],
 "初夢":["貘枕","初寝覚"],
 "初漁":["漁始","初網"],
-"花びら餅":["菱葩餅、菱はなびら"],
+"花弁餅":["菱葩餅、菱はなびら"],
 "羽子つき":["羽子","追羽子","揚羽子","遣羽子"],
 "破魔弓":["破魔矢"],
-"春着":["正月小袖","春襲"],
+"春着":["正月小袖","春襲","春小袖"],
 "春駒":["春駒舞","春駒万歳"],
 "弾初":["初弾","琴始"],
 "ひめ始":["姫始","密事始"],
@@ -5289,7 +5284,8 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "福藁":["福藁敷く","ふくさ藁"],
 "太箸":["祝箸","柳箸","箸紙","雑煮箸"],
 "蓬莱":["掛蓬莱","蓬莱飾"],
-"宝恵篭":["宝恵駕","戎篭"],
+"宝恵籠":["宝恵駕","戎籠"],
+"ホットドリンクス":["ホットレモン","ホットワイン","ホットウイスキー","ホットココア"]
 "仏の座":["田平子"],
 "ぼんでん":["梵天"],
 "ぽつぺん":["ぽこんぽこん"],
@@ -5313,7 +5309,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "若菜":["若菜摘","粥草","七草粥"],
 "若水":["初水","福水","若井","井華水","若潮","若潮迎へ"],
 "笑初":["初笑"],
-"藁盒子":["幸篭","ヤス"]
+"藁盒子":["幸籠"]
 
 
 };
