--- a/index.html
+++ b/index.html
@@ -4324,7 +4324,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "向日葵":["日車","日輪草","天蓋花","天竺葵"],
 "姫女宛":["柳葉姫菊","鉄道草"],
 "日焼":["潮焼"],
-"氷菓":["氷菓子","アイスキャンデー","アイスクリーム","ソフトクリーム","シャーベット","ジェラート"]
+"氷菓":["氷菓子","アイスキャンデー","アイスクリーム","ソフトクリーム","シャーベット","ジェラート"],
 "蜜柑の花":["花蜜柑"],
 "夕立":["ゆだち","白雨","驟雨","夕立雲","夕立風","スコール","片降"],
 "冷酒":["冷し酒"],
