--- a/index.html
+++ b/index.html
@@ -5118,7 +5118,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "雪催":["雪雲","雪げ","雪曇"],
 "雪焼":["雪眼"],
 "行く年":["年逝く","年流る","年送る"],
-"湯気立て":["加湿器"]
+"湯気立て":["加湿器"],
 "柚子湯":["柚子風呂","冬至湯"],
 "湯婆":["たんぽ"],
 "夜着":["掻巻","小夜着"],
@@ -5285,7 +5285,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "太箸":["祝箸","柳箸","箸紙","雑煮箸"],
 "蓬莱":["掛蓬莱","蓬莱飾"],
 "宝恵籠":["宝恵駕","戎籠"],
-"ホットドリンクス":["ホットレモン","ホットワイン","ホットウイスキー","ホットココア"]
+"ホットドリンクス":["ホットレモン","ホットワイン","ホットウイスキー","ホットココア"],
 "仏の座":["田平子"],
 "ぼんでん":["梵天"],
 "ぽつぺん":["ぽこんぽこん"],
