--- a/index.html
+++ b/index.html
@@ -3488,7 +3488,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "金盞花":["常春花","長春花"],
 "金鳳花":["さんぽうげ","馬の脚形","駒の脚形"],
 "御忌":["法然忌","円光忌","御忌詣","御忌参","御忌の寺","御忌の鐘","御忌小袖","弁当始"],
-"茎立":["くきだち"],
+"茎立":["くくたち"],
 "枸杞の芽":["枸杞芽","枸杞飯"],
 "草の芽":["名草の芽"],
 "草餅":["草の餅","蓬餅","母子餅","草団子"],
@@ -3499,7 +3499,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "桑摘":["桑摘女","桑摘唄","桑籠","桑車"],
 "桑解く":["桑ほどく"],
 "華鬘草":["華鬘牡丹","けまん","瓔珞牡丹","藤牡丹","鯛釣草"],
-"建国記念日":["建国の日","建国祭","紀元節"],
+"建国記念の日":["建国の日","建国祭","紀元節"],
 "紫雲英":["蓮華草","げんげん","五形花"],
 "霾":["黄砂","霾ぐもり","蒙古風","霾風","霾天","黄塵万丈","黄砂降る"],
 "紅梅":["薄紅梅"],
