--- a/index.html
+++ b/index.html
@@ -3218,7 +3218,6 @@ let RAW = [
   {w:'餅搗',k:'もちつき',s:'冬',p:'仲冬',c:'生活'},
   {w:'注連飾る',k:'しめかざる',s:'冬',p:'仲冬',c:'生活'},
   {w:'年忘',k:'としわすれ',s:'冬',p:'仲冬',c:'生活'},
-  {w:'年越',k:'としこし',s:'冬',p:'仲冬',c:'生活'},
   {w:'晦日蕎麦',k:'みそかそば',s:'冬',p:'仲冬',c:'生活'},
   {w:'冬休',k:'ふゆやすみ',s:'冬',p:'仲冬',c:'生活'},
   {w:'柚子湯',k:'ゆずゆ',s:'冬',p:'仲冬',c:'生活'},
@@ -3463,6 +3462,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "芥菜":["芥子菜"],
 "鴉の巣":["鳥の巣"],
 "枸橘の花":["からたちの花","枳殻"],
+"獺魚を祭る":["獺の祭","獺祭"],
 "蛙の目借時":["目借時"],
 "寒明":["寒明ける","寒の明け"],
 "観潮":["渦見","渦潮見","渦見船","観潮船"],
