--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@ let RAW = [
   {w:'雛流し',k:'ひなながし',s:'春',p:'仲春',c:'行事'},
   {w:'雛納め',k:'ひなのおさめ',s:'春',p:'仲春',c:'行事'},
   {w:'雁風呂',k:'がんぶろ',s:'春',p:'仲春',c:'行事'},
-  {w:'東日本大震災忌',k:'ひがしにほんだいしんさいき',s:'春',p:'仲春',c:'行事'},
+  {w:'東日本大震災の日',k:'ひがしにほんだいしんさいのひ',s:'春',p:'仲春',c:'行事'},
   {w:'四月馬鹿',k:'しがつばか',s:'春',p:'仲春',c:'行事'},
   {w:'春日祭',k:'かすがまつり',s:'春',p:'仲春',c:'行事'},
   {w:'嵯峨の柱炬',k:'さがのはしらたいまつ',s:'春',p:'仲春',c:'行事'},
@@ -3743,6 +3743,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "榛の花":["赤楊の花"],
 "薔薇の芽":["茨の芽"],
 "バレンタインデー":["バレンタインの日","愛の日"],
+"東日本大震災の日":["東日本大震災忌","三月十一日"],
 "彼岸":["お彼岸","入彼岸","彼岸過ぎ","彼岸婆"],
 "彼岸会":["彼岸詣","彼岸参","彼岸寺","お中日","彼岸団子","彼岸餅"],
 "引鴨":["行く鴨","帰る鴨","鴨帰る"],
