--- a/index.html
+++ b/index.html
@@ -2881,7 +2881,7 @@ let RAW = [
   {w:'マフラー',k:'まふらー',s:'冬',p:'三冬',c:'生活'},
   {w:'手袋',k:'てぶくろ',s:'冬',p:'三冬',c:'生活'},
   {w:'マスク',k:'ますく',s:'冬',p:'三冬',c:'生活'},
-  {w:'ホットドリンクス',k:'ホットドリンクス',s:'冬',p:'三冬',c:'生活'},
+  {w:'ホットドリンクス',k:'ほっとどりんくす',s:'冬',p:'三冬',c:'生活'},
   {w:'熱燗',k:'あつかん',s:'冬',p:'三冬',c:'生活'},
   {w:'玉子酒',k:'たまござけ',s:'冬',p:'三冬',c:'生活'},
   {w:'葛湯',k:'くずゆ',s:'冬',p:'三冬',c:'生活'},
@@ -4761,7 +4761,7 @@ let BOUDAI = {"藍蒔く":["藍植う"],
 "鴛鴦":["をし"],
 "落葉":["落葉","落葉焚","落葉掻","落葉籠","落葉期"],
 "乙字忌":["寒雷忌 二十日忌"],
-"おでん":["関東煮"],
+"おでん":["関東煮","おでん酒"],
 "御取越":["引上会"],
 "帯解":["紐解"],
 "御神渡":["御渡り"],
